url for server deployment

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-VITE_BACKEND_URL=http://localhost:8081/api
+#for local deployment
+#VITE_BACKEND_URL=http://localhost:8081/api
+
+#for server deployment
+VITE_BACKEND_URL=http://cloudstorage-backend:8081/api
+
