--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 #VITE_BACKEND_URL=http://localhost:8081/api
 
 #for server deployment
-VITE_BACKEND_URL=http://cloudstorage-backend:8081/api
+VITE_BACKEND_URL=http://23.88.57.34:8081/api
 
