added app2.flinkfiles.com in env

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@
 #VITE_BACKEND_URL=http://localhost:8081/api
 
 #for server deployment
-VITE_BACKEND_URL=http://23.88.57.34:8081/api
+#VITE_BACKEND_URL=http://23.88.57.34:8081/api
 
+VITE_BACKEND_URL=https://app2.flinkfiles.com/api
